[gd_scene load_steps=4 format=2]

[ext_resource path="res://SpecialSelector.gd" type="Script" id=1]
[ext_resource path="res://Assets/Themes/GUI_Theme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/sfx/type.wav" type="AudioStream" id=3]

[node name="SpecialSelector" type="Node2D"]
script = ExtResource( 1 )

[node name="AudioStreamPlayer_Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenAirlock1" type="Button" parent="VBoxContainer"]
margin_right = 338.0
margin_bottom = 32.0
theme = ExtResource( 2 )
text = "OPEN AIRLOCK 1"

[node name="OpenAirlock2" type="Button" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 338.0
margin_bottom = 68.0
theme = ExtResource( 2 )
text = "OPEN airlock 2"

[node name="EnterHypersleep" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 338.0
margin_bottom = 104.0
theme = ExtResource( 2 )
text = "ENTER HYPERSLEEP"

[node name="LaunchNarcissus" type="Button" parent="VBoxContainer"]
margin_top = 108.0
margin_right = 338.0
margin_bottom = 140.0
theme = ExtResource( 2 )
text = "Launch Narcissus"

[node name="StartAutoDestruct" type="Button" parent="VBoxContainer"]
margin_top = 144.0
margin_right = 338.0
margin_bottom = 176.0
theme = ExtResource( 2 )
text = "START Auto-Destruct"

[node name="StopAutoDestruct" type="Button" parent="VBoxContainer"]
margin_top = 180.0
margin_right = 338.0
margin_bottom = 212.0
theme = ExtResource( 2 )
text = "START Auto-Destruct"

[node name="CancelButton" type="Button" parent="VBoxContainer"]
margin_top = 216.0
margin_right = 338.0
margin_bottom = 248.0
theme = ExtResource( 2 )
text = "CANCEL"

[connection signal="pressed" from="VBoxContainer/OpenAirlock1" to="." method="_on_OpenAirlock1_pressed"]
[connection signal="pressed" from="VBoxContainer/OpenAirlock2" to="." method="_on_OpenAirlock2_pressed"]
[connection signal="pressed" from="VBoxContainer/EnterHypersleep" to="." method="_on_EnterHypersleep_pressed"]
[connection signal="pressed" from="VBoxContainer/LaunchNarcissus" to="." method="_on_LaunchNarcissus_pressed"]
[connection signal="pressed" from="VBoxContainer/StartAutoDestruct" to="." method="_on_StartAutoDestruct_pressed"]
[connection signal="pressed" from="VBoxContainer/StopAutoDestruct" to="." method="_on_StopAutoDestruct_pressed"]
[connection signal="pressed" from="VBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
